fixed bug with navbar z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ body {
 }
 
 header {
-    z-index: 100;
+    z-index: 1000;
     width: 100%;
     position: fixed;
     background-color: #1F1F1F ;
